@@ -9,6 +9,7 @@ Comments= <<EOT
 - Fix bug whereby I had used a variable name $numeric instead of defined($numeric).
 This is triggered when a node attribute has the value 0.
 Reported by Martin Ward.
+- Add files t/00.versions.*.
 EOT
 
 [V 2.11]
